# tree-sitter-fsharp

./: .conform.7289672.test.fs  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CMakeLists.txt  Cargo.toml  IMPLEMENTATION_STATUS.md  Makefile  Package.swift  README.md  activate  binding.gyp  build-wasm.bat  build-wasm.sh  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  test-api.fsx  tree-sitter.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  publish.yml  regenerate.yml
.opencode/: ast_parser.fsx
bindings/c/: tree-sitter-fsharp.h  tree-sitter-fsharp.pc.in
bindings/go/: binding.go  binding_fsharp.go  binding_signature.go  binding_test.go  go.mod
bindings/node/: binding.cc  binding_test.js  fsharp.js  index.d.ts  index.js
bindings/rust/: build.rs  lib.rs
common/: scanner.h
corpus/: constants.txt  expr.txt  function_defn.txt
examples/: async.fs  expressions.fs  query.fs  types.fs
examples/playground/: test.fsi
fsharp/: grammar.js  package.json
fsharp/src/: grammar.json  node-types.json  scanner.c
fsharp_signature/: grammar.js  package.json
fsharp_signature/src/: grammar.json  node-types.json  scanner.c
grammars/fsharp/: grammar.js  package.json
grammars/interface/: grammar.js  package.json
queries/: highlights.scm  indents.scm  injections.scm  locals.scm  tags.scm  textobjects.scm
src/: grammar.json  node-types.json  scanner.c  scanner.cc
test/: files.txt  invalid-files.txt  parse-examples.sh
wasm/: tree-sitter-fsharp_signature.wasm
(+49 files in other folders)
